# deal-brain

./: .env.example  .git-commit-message.txt  .gitignore  .pre-commit-config.yaml  BASELINE_UI_IMPLEMENTATION.md  BE-007-CPU-METRICS-TASK-IMPLEMENTATION.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_TEST_SUITE_DELIVERED.md  CONTRIBUTING.md  CPU_ENDPOINTS_TESTING.md  DEPLOYMENT_SUMMARY.md  FILES_CREATED.md  IMPLEMENTATION_SUMMARY.md  INSTALL_DEPS.md  MIGRATION_SUMMARY.md  MONITORING-SETUP-SUMMARY.md  Makefile  NEXT_STEPS.md  PHASE_2A_IMPLEMENTATION_SUMMARY.md  PHASE_2A_NEXT_STEPS.md  PHASE_2B_INFRASTRUCTURE_COMPLETE.md  PHASE_3_3_3_4_SUMMARY.md  PHASE_3_TESTING_GUIDE.md  PHASE_5_5_IMPLEMENTATION_SUMMARY.md  README.md  TASK_ID_018_IMPLEMENTATION_SUMMARY.md  TELEMETRY_IMPLEMENTATION_SUMMARY.md  TEST-SUMMARY-PHASE-8.md  TESTING_COLLECTIONS_API.md  alembic.ini  analyze_amazon_html.py  debug_amazon.com_1fe23618.html  docker-compose.profiles.yml  docker-compose.yml  find_working_selector.py  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  (+4 more)
.claude/: DOCUMENTATION_POLICY_SPEC.md  settings.json
.github/: copilot-instructions.md
ai/: python_symbols.json  symbols-api.json  symbols-shared.json  symbols-web.json  typescript_symbols.json
data/: README.md  deal_brain_valuation_rules (1).json  deal_brain_valuation_rules.json  filter_passmark_top_2k.py  formula_reference.json  passmark_data.json  passmark_sample.csv  top-2k-passmark.json
docs/: DEPLOYMENT_READY.md  DOCS_GAP_ANALYSIS.md  README.md  URL_INGESTION_ARCHITECTURE.md  db-overhaul-progress.md  db-types-report.md  ideation.md  img-001-implementation-summary.md  implementation-plan.md  importer-enhancement-plan.md  importer-revamp-9-22.md  importer-revamp-implementation-plan.md  importer-revamp-prd.md  importer-usage-guide.md  init-prd.md  normalizer_service_usage.md  performance-metrics-qa.md  setup.md  task-id-014-implementation-summary.md  theming-developer-guide.md  troubleshooting.md
examples/: formula_validation_demo.py
scripts/: README.md  README_TESTING.md  backfill_fk_metadata.py  fix_baseline_field_types.py  generate_formula_reference.py  import_entities.py  import_libraries.py  import_passmark_data.py  load_test.py  recalculate_all_metrics.py  recalculate_cpu_marks.py  run-accessibility-audit.sh  security_audit.py  seed_sample_listings.py  seed_test_data.py  test_performance_optimizations.py  update_cpus_from_passmark.py  verify_baseline_hydration_fixes.py  verify_phase_2a_schema.py  verify_sharing_models.py
tests/: ACTION_MULTIPLIERS_TEST_SUMMARY.md  PHASE_2_TEST_SUMMARY.md  (+41 more)
(+1293 files in other folders)
