[tool.poetry]
name = "deal-brain"
version = "0.1.0"
description = "Deal Brain monorepo: FastAPI backend, Next.js frontend, CLI, and domain engine."
authors = ["Nick Miethe <nick@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "dealbrain_core", from = "packages/core" },
  { include = "dealbrain_api", from = "apps/api" },
  { include = "dealbrain_cli", from = "apps/cli" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
SQLAlchemy = "^2.0.25"
asyncpg = "^0.29.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.1.0"
psycopg = { version = "^3.1.18", extras = ["binary"] }
psycopg-binary = "^3.1.18"
pydantic = "^2.6.2"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
celery = "^5.3.6"
redis = "^5.0.1"
loguru = "^0.7.2"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
python-multipart = "^0.0.9"
typer = { version = "^0.9.0", extras = ["all"] }
tenacity = "^8.2.3"
prometheus-fastapi-instrumentator = "^6.1.0"
structlog = "^24.1.0"
httpx = "^0.26.0"
itsdangerous = "^2.1.2"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-dateutil = "^2.8.2"
numpy = "^1.26.4"
rapidfuzz = "^3.6.1"
pyyaml = "^6.0.1"
aiosqlite = "^0.21.0"
extruct = "^0.18.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-exporter-otlp = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
sse-starlette = "^2.0.0"
playwright = "^1.41.2"
boto3 = "^1.34.0"
pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
factory-boy = "^3.3.0"
freezegun = "^1.4.0"
ruff = "^0.2.2"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
types-python-dateutil = "^2.8.19.14"
types-requests = "^2.31.0.20240218"
playwright = "^1.41.2"
pytest-playwright = "^0.4.2"
pre-commit = "^3.6.2"
colorama = "^0.4.6"

[tool.poetry.scripts]
dealbrain-api = "dealbrain_api.main:run"
dealbrain-cli = "dealbrain_cli.main:app"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "N", "S", "F401"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
